--- a/public/styles.css
+++ b/public/styles.css
@@ -31,6 +31,7 @@
   justify-content: center;
   list-style: none;
   padding: 0;
+  max-width: 422px;
 }
 
 .winner {
@@ -44,6 +45,7 @@
   border-bottom: 1px solid #aaa;
   border-right: 1px solid #aaa;
   flex-grow: 1;
+  padding: 0;
 }
 
 .roundSpacer{
